[tool.poetry]
name = "navi"
version = "0.1.0"
description = "Test"

[[tool.poetry.source]]
name = 'pypi-public'
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
marshmallow = "^3.7.1"
marshmallow-sqlalchemy = "^0.23.1"
pip = "^20.2"
psycogreen = "^1.0.2"
psycopg2-binary = "^2.8.5"
python = "^3.7"
python-json-logger = "^2.0.2"
sqlalchemy = "^1.3.18"
pandas = "^1.0.5"
simple-pid = "^0.2.4"
kubernetes = "^10.0.1"
pytest = "^6.0.1"
grpcio = "^1.31.0"
grpcio-tools = "^1.31.0"
protobuf = "^3.12.2"
pytest_mock = "^3.3.1"
asynctest = "0.13.0"
pdbpp = "^0.10.2"
pytest-pgsql = "^1.1.2"
google-api-core = "^1.22.4"
alembic = "^1.4.3"
opentelemetry-api = "^0.17b0"
opentelemetry-sdk = "^0.17b0"
opentelemetry-instrumentation-grpc = "^0.17b0"
opentelemetry-instrumentation = "^0.17b0"
retrying = "^1.3.3"
opentelemetry-exporter-opencensus = "^0.17b0"
opentelemetry-exporter-prometheus = "^0.17b0"
opentelemetry-instrumentation-sqlalchemy = "^0.17b0"
grafanalib = "0.5.12"
google-cloud-storage = "^1.35.0"
google-cloud-bigtable = "^2.13.1"
google-cloud-pubsub = "1.7.0"
google-api-python-client = "^1.12.8"
kfp = "1.6.3"
kfp-server-api = "1.6.0"
asyncua = "0.9.95"

astunparse = "^1.6.3"
grpcio-reflection = "^1.35.0"
kubeflow-katib = "^0.11.0"
click = "^7.1.2"
# torch = "^1.10.0"
torchserve = "^0.3.0"
torch-model-archiver = "^0.3.0"
# pytorch-lightning = "1.5.0"
sendgrid = "^6.6.0"
gcsfs = "^0.7.2"
python-constraint = "^1.4.0"
scikit-learn = "^0.24.1"
fsspec = "2021.11.1" # Pinning to a version. See this - https://www.notion.so/phaidra/Debug-version-incompatibility-issues-345f268162b54b08af2aae32a5dffb26#eb823a27da31435faa7a2998bce4bd5a
Jinja2 = "^3.0"
mypy = "^0.812"
data-science-types = "^0.2.23"
sphinx-rtd-theme = "^0.5.2"
# torchmetrics = "^0.6.0"
prometheus-client = "^0.13.1"
setuptools = "^57.0.0"
memory-profiler = "^0.58.0"
flask-restful = "^0.3.9"
flask-marshmallow = "^0.14.0"
flask = "^2.0.2"
flask-testing = "^0.8.1"
flask-cors = "^3.0.10"
python-jose = "^3.3.0"
gunicorn = "^20.1.0"
python-dateutil = "^2.8.2"
matplotlib = "^3.5.0"
hypothesis = "^6.30.1"
jsonpickle = "^2.0.0"
gevent = "^21.12.0"
grpcio-health-checking = "^1.46.3"
aioflask = "^0.4.0"
schedule = "^1.1.0"
pytest-bdd = "^6.0.1"
pymongo = {extras = ["srv"], version = "^4.3.2"}
pymongo-inmemory = "^0.2.11"
ray = {extras = ["default"], version = "^2.1.0"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pylint = "^2.5.3"
isort = "^4.2.5"
black = "^19.10b0"
pre-commit = "^2.7.1"
sphinx = "3.5.3"

[build-system]
requires = ["poetry>=0.12", "pip>=20.2"]
build-backend = "poetry.masonry.api"
